feat(operations): harden security, reporting, and operational workflows